API ChangeLog

24-Apr-2017	Troy A. Griffitts <scribe@crosswire.org>
	Branching 1.8.x

16-Apr-2016	Troy A. Griffitts <scribe@crosswire.org>
	Added working --chapter --verse decrementors across Testament
	Added handling of more odd double colon verse reference texts
	Removed deprecated utility cipherraw; use mod2zmod w/ cipherkey
		or osis2mod -c instead.
	Added new tests to testsuite for mod2zmod and osis2mod with cipher

18-Dec-2015     Peter von Kaehne <refdoc@crosswire.org>
	Added image and table handling to TEI latex
	Added image handling to TEI RTF

18-Dec-2015	Peter von Kaehne <refdoc@crosswire.org>
	Added image and table handling to TEI xhtml and htmlhref filters
	contributed by Dominique Corbex <dominique.corbex@gmail.com> 
	
15-Dec-2014	DM Smith <dmsmith@crosswire.org>
	Fixed endless loop in osis2mod for some inputs.

15-Dec-2014	DM Smith <dmsmith@crosswire.org>
	Added support for Psalm Book divisions using <div type=majorSection>
	from GHellings

03-Dec-2014	Karl Kleinpaste <charcoal@users.sf.net>
	Corrected anomalous OSIS highlighting output w/GHellings' patches in
		src/modules/filters/osis{plain,xhtml}.cpp

12-Jul-2014	Костя Маслюк <kostyamaslyuk@gmail.com>
	Versification mapping implementation and example at
		examples/tasks/parallelbibles.cpp

27-Apr-2014	Troy A. Griffitts <scribe@crosswire.org>
	Added C# bindings contributed by Daniel Hughes <trampster@gmail.com>

17-Mar-2014	Chris Little <chrislit@crosswire.org>
	Added zVerse4, zText4, & zCom4 classes to support compressed text/
		commentary modules with entry sizes > 64k

3-Mar-2014	Chris Little <chrislit@crosswire.org>
	Added support for bzip2 (Burrows-Wheeler) module compression via libbz2
	Added support for xz (LZMA2) module compression via liblzma

30-Dec-2013 	Peter von Kaehne <refdoc@crosswire.org>
	Added LaTeX output filters


* Release 1.7.0 *

5-Oct-2013	Troy A. Griffitts <scribe@crosswire.org>
	Add a new Option filter, OSISReferenceLinks, based on work submitted